# emerald

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: connection.rs  lib.rs  main.rs  routes.rs  session.rs
common/: Cargo.toml
common/src/: config.rs
config/: global.toml.default
database/: Cargo.toml
database/migrations/2019-09-27-163453_create_accounts/: up.sql
database/migrations/2019-09-27-171556_insert_admin_account/: up.sql
database/src/: lib.rs  main.rs  models.rs  schema.rs
database/src/models/: accounts.rs
emerald/: CMakeLists.txt
emerald/src/: main.cpp
emeraldint/: CMakeLists.txt
emeraldint/src/: main.cpp
manage/: Cargo.toml
manage/src/: main.rs
winx/: CMakeLists.txt
winx/include/winx/: process.h
winx/src/: process.cpp
