[package]
name = "api"
version = "0.1.0"
authors = ["Nicholas Bailey <nicholas.j.bailey91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
log = "0.4.8"
rand = "0.7.2"
rocket = "0.4.2"
diesel = { version = "1.4.2", features = [ "r2d2", "chrono", "postgres" ] }
database = { path = "../database" }


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]