[package]
name = "common"
version = "0.1.0"
authors = ["Nicholas Bailey <nicholas.j.bailey91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"