[package]
name = "database"
version = "0.1.0"
authors = ["Nicholas Bailey <nicholas.j.bailey91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.6.0"
chrono = "0.4.9"
dotenv = "0.14.1"
diesel = { version = "1.4.2", features = [ "chrono", "postgres" ] }